# git-diff-critique

./: LICENSE  README.md  main.py  pyproject.toml
.gemini/: context.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
git_diff_critique_agent/: agent.py  instructions.py
tests/: __init__.py  test_agent.py
